--- a/0)review_sgb.html
+++ b/0)review_sgb.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG 파일 활용 리뷰</title>
+    <title>svdfd 파일 활용 리뷰</title>
     <style>
         div{
             float: left;
